[package]
name = "wpt_data"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wptreport = { git = "https://github.com/jgraham/wptreport.rs" }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
conv = "^0.3.3"
smallvec = { version = "^1.8.0", features = ["union"] }
itertools = "^0.10"
flate2 = "^1.0.22"
approx = "^0.5.1"
rayon = "^1.5.1"
bumpalo = { version = "^3.9.1", features = ["collections"] }
accurate = "0.3.1"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
peeking_take_while = "1.0.0"
internment = { version = "0.7.0", features = ["arc"] }
string-interner = "0.14.0"
clap = { version = "4.0.29", features = ["derive"] }
url = "2.3.1"
csv = "1.1.6"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "score_fdb411a036"
harness = false

[lib]
bench = false

[profile.release]
debug = 1
